--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="image/android-chrome-192x192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
@@ -12,11 +13,16 @@
 </head>
 
 <body>
-    <!--top-container-->
-    <div class="top-container">
-        <h1>I'm Zac.</h1>
-        <h2>this is my portfolio and an overview of how I work</h2>
-    </div>
+    <header>
+        <!--top-container-->
+        <div class="top-container">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="index.html">Home</a>
+            </nav>
+            <h1>I'm Zac.</h1>
+            <h2>this is my portfolio and an overview of how I work</h2>
+        </div>
+    </header>
 
     <main>
         <!-- Project 1 -->
